v4.1.1/_sources/plugins/pnp_device_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-entry
.. role:: ansible-option-default
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.dnac.pnp_device_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.pnp_device_info -- Information module for Pnp Device
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 4.1.1).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.pnp_device_info`.

.. version_added

.. versionadded:: 3.1.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Pnp Device.
- Get Pnp Device by id.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk >= 2.4.0
- python >= 3.5


.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-cmState"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-cmState:

      .. rst-class:: ansible-option-title

      **cmState**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-cmState" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      CmState query parameter. Device Connection Manager State.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **dnac_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-default-bold:`no` :ansible-option-default:`← (default)`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **dnac_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **dnac_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **dnac_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-dnac_username:
      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-user:

      .. rst-class:: ansible-option-title

      **dnac_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco DNA Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **dnac_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **dnac_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco DNA Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.2.3.3"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-hostname"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-hostname:

      .. rst-class:: ansible-option-title

      **hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Hostname query parameter. Device Hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-id"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Id path parameter.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-lastContact"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-lastContact:

      .. rst-class:: ansible-option-title

      **lastContact**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-lastContact" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      LastContact query parameter. Device Has Contacted lastContact > 0.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-choices-entry:`yes`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-limit"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-limit:

      .. rst-class:: ansible-option-title

      **limit**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Limit query parameter. Limits number of results.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-macAddress"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-macAddress:

      .. rst-class:: ansible-option-title

      **macAddress**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-macAddress" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      MacAddress query parameter. Device Mac Address.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-name"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-name:

      .. rst-class:: ansible-option-title

      **name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Name query parameter. Device Name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-offset"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-offset:

      .. rst-class:: ansible-option-title

      **offset**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Offset query parameter. Index of first result.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-onbState"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-onbState:

      .. rst-class:: ansible-option-title

      **onbState**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-onbState" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      OnbState query parameter. Device Onboarding State.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-pid"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-pid:

      .. rst-class:: ansible-option-title

      **pid**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-pid" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Pid query parameter. Device ProductId.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-projectId"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-projectId:

      .. rst-class:: ansible-option-title

      **projectId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-projectId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ProjectId query parameter. Device Project Id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-projectName"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-projectName:

      .. rst-class:: ansible-option-title

      **projectName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-projectName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ProjectName query parameter. Device Project Name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-serialNumber"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-serialNumber:

      .. rst-class:: ansible-option-title

      **serialNumber**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-serialNumber" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SerialNumber query parameter. Device Serial Number.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteName"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-siteName:

      .. rst-class:: ansible-option-title

      **siteName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SiteName query parameter. Device Site Name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-smartAccountId"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-smartAccountId:

      .. rst-class:: ansible-option-title

      **smartAccountId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-smartAccountId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SmartAccountId query parameter. Device Smart Account.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sort"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-sort:

      .. rst-class:: ansible-option-title

      **sort**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sort" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sort query parameter. Comma seperated list of fields to sort on.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-sortOrder"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-sortOrder:

      .. rst-class:: ansible-option-title

      **sortOrder**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-sortOrder" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SortOrder query parameter. Sort Order Ascending (asc) or Descending (des).


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-source"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-source:

      .. rst-class:: ansible-option-title

      **source**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-source" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Source query parameter. Device Source.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-state_"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-state_:

      .. rst-class:: ansible-option-title

      **state_**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-state_" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      State query parameter. Device State.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco DNA Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`no`
      - :ansible-option-default-bold:`yes` :ansible-option-default:`← (default)`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-virtualAccountId"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-virtualAccountId:

      .. rst-class:: ansible-option-title

      **virtualAccountId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-virtualAccountId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      VirtualAccountId query parameter. Device Virtual Account.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-workflowId"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-workflowId:

      .. rst-class:: ansible-option-title

      **workflowId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-workflowId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      WorkflowId query parameter. Device Workflow Id.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-workflowName"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__parameter-workflowName:

      .. rst-class:: ansible-option-title

      **workflowName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-workflowName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      WorkflowName query parameter. Device Workflow Name.


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - Supports \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco DNAC SDK
   - The parameters starting with dnac_ are used by the Cisco DNAC Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Pnp Device reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Pnp Device object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Pnp Device
      cisco.dnac.pnp_device_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        limit: 0
        offset: 0
        sort: []
        sortOrder: string
        serialNumber: []
        state_: []
        onbState: []
        cmState: []
        name: []
        pid: []
        source: []
        projectId: []
        workflowId: []
        projectName: []
        workflowName: []
        smartAccountId: []
        virtualAccountId: []
        lastContact: True
        macAddress: string
        hostname: string
        siteName: string
      register: result

    - name: Get Pnp Device by id
      cisco.dnac.pnp_device_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        id: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-dnac_response"></div>

      .. _ansible_collections.cisco.dnac.pnp_device_info_module__return-dnac_response:

      .. rst-class:: ansible-option-title

      **dnac_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`
    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco DNAC Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` "{\\n  \\"\_id\\": \\"string\\",\\n  \\"deviceInfo\\": {\\n    \\"source\\": \\"string\\",\\n    \\"serialNumber\\": \\"string\\",\\n    \\"stack\\": true,\\n    \\"mode\\": \\"string\\",\\n    \\"state\\": \\"string\\",\\n    \\"location\\": {\\n      \\"siteId\\": \\"string\\",\\n      \\"address\\": \\"string\\",\\n      \\"latitude\\": \\"string\\",\\n      \\"longitude\\": \\"string\\",\\n      \\"altitude\\": \\"string\\"\\n    },\\n    \\"description\\": \\"string\\",\\n    \\"onbState\\": \\"string\\",\\n    \\"authenticatedMicNumber\\": \\"string\\",\\n    \\"authenticatedSudiSerialNo\\": \\"string\\",\\n    \\"capabilitiesSupported\\": [\\n      \\"string\\"\\n    ],\\n    \\"featuresSupported\\": [\\n      \\"string\\"\\n    ],\\n    \\"cmState\\": \\"string\\",\\n    \\"firstContact\\": 0,\\n    \\"lastContact\\": 0,\\n    \\"macAddress\\": \\"string\\",\\n    \\"pid\\": \\"string\\",\\n    \\"deviceSudiSerialNos\\": [\\n      \\"string\\"\\n    ],\\n    \\"lastUpdateOn\\": 0,\\n    \\"workflowId\\": \\"string\\",\\n    \\"workflowName\\": \\"string\\",\\n    \\"projectId\\": \\"string\\",\\n    \\"projectName\\": \\"string\\",\\n    \\"deviceType\\": \\"string\\",\\n    \\"agentType\\": \\"string\\",\\n    \\"imageVersion\\": \\"string\\",\\n    \\"fileSystemList\\": [\\n      {\\n        \\"type\\": \\"string\\",\\n        \\"writeable\\": true,\\n        \\"freespace\\": 0,\\n        \\"name\\": \\"string\\",\\n        \\"readable\\": true,\\n        \\"size\\": 0\\n      }\\n    ],\\n    \\"pnpProfileList\\": [\\n      {\\n        \\"profileName\\": \\"string\\",\\n        \\"discoveryCreated\\": true,\\n        \\"createdBy\\": \\"string\\",\\n        \\"primaryEndpoint\\": {\\n          \\"port\\": 0,\\n          \\"protocol\\": \\"string\\",\\n          \\"ipv4Address\\": {},\\n          \\"ipv6Address\\": {},\\n          \\"fqdn\\": \\"string\\",\\n          \\"certificate\\": \\"string\\"\\n        },\\n        \\"secondaryEndpoint\\": {\\n          \\"port\\": 0,\\n          \\"protocol\\": \\"string\\",\\n          \\"ipv4Address\\": {},\\n          \\"ipv6Address\\": {},\\n          \\"fqdn\\": \\"string\\",\\n          \\"certificate\\": \\"string\\"\\n        }\\n      }\\n    ],\\n    \\"imageFile\\": \\"string\\",\\n    \\"httpHeaders\\": [\\n      {\\n        \\"key\\": \\"string\\",\\n        \\"value\\": \\"string\\"\\n      }\\n    ],\\n    \\"neighborLinks\\": [\\n      {\\n        \\"localInterfaceName\\": \\"string\\",\\n        \\"localShortInterfaceName\\": \\"string\\",\\n        \\"localMacAddress\\": \\"string\\",\\n        \\"remoteInterfaceName\\": \\"string\\",\\n        \\"remoteShortInterfaceName\\": \\"string\\",\\n        \\"remoteMacAddress\\": \\"string\\",\\n        \\"remoteDeviceName\\": \\"string\\",\\n        \\"remotePlatform\\": \\"string\\",\\n        \\"remoteVersion\\": \\"string\\"\\n      }\\n    ],\\n    \\"lastSyncTime\\": 0,\\n    \\"ipInterfaces\\": [\\n      {\\n        \\"status\\": \\"string\\",\\n        \\"macAddress\\": \\"string\\",\\n        \\"ipv4Address\\": {},\\n        \\"ipv6AddressList\\": [\\n          {}\\n        ],\\n        \\"name\\": \\"string\\"\\n      }\\n    ],\\n    \\"hostname\\": \\"string\\",\\n    \\"authStatus\\": \\"string\\",\\n    \\"stackInfo\\": {\\n      \\"supportsStackWorkflows\\": true,\\n      \\"isFullRing\\": true,\\n      \\"stackMemberList\\": [\\n        {\\n          \\"serialNumber\\": \\"string\\",\\n          \\"state\\": \\"string\\",\\n          \\"role\\": \\"string\\",\\n          \\"macAddress\\": \\"string\\",\\n          \\"pid\\": \\"string\\",\\n          \\"licenseLevel\\": \\"string\\",\\n          \\"licenseType\\": \\"string\\",\\n          \\"sudiSerialNumber\\": \\"string\\",\\n          \\"hardwareVersion\\": \\"string\\",\\n          \\"stackNumber\\": 0,\\n          \\"softwareVersion\\": \\"string\\",\\n          \\"priority\\": 0\\n        }\\n      ],\\n      \\"stackRingProtocol\\": \\"string\\",\\n      \\"validLicenseLevels\\": [\\n        \\"string\\"\\n      ],\\n      \\"totalMemberCount\\": 0\\n    },\\n    \\"reloadRequested\\": true,\\n    \\"addedOn\\": 0,\\n    \\"siteId\\": \\"string\\",\\n    \\"aaaCredentials\\": {\\n      \\"password\\": \\"string\\",\\n      \\"username\\": \\"string\\"\\n    },\\n    \\"userMicNumbers\\": [\\n      \\"string\\"\\n    ],\\n    \\"userSudiSerialNos\\": [\\n      \\"string\\"\\n    ],\\n    \\"addnMacAddrs\\": [\\n      \\"string\\"\\n    ],\\n    \\"preWorkflowCliOuputs\\": [\\n      {\\n        \\"cli\\": \\"string\\",\\n        \\"cliOutput\\": \\"string\\"\\n      }\\n    ],\\n    \\"tags\\": {},\\n    \\"sudiRequired\\": true,\\n    \\"smartAccountId\\": \\"string\\",\\n    \\"virtualAccountId\\": \\"string\\",\\n    \\"populateInventory\\": true,\\n    \\"siteName\\": \\"string\\",\\n    \\"name\\": \\"string\\"\\n  },\\n  \\"systemResetWorkflow\\": {\\n    \\"\_id\\": \\"string\\",\\n    \\"state\\": \\"string\\",\\n    \\"type\\": \\"string\\",\\n    \\"description\\": \\"string\\",\\n    \\"lastupdateOn\\": 0,\\n    \\"imageId\\": \\"string\\",\\n    \\"currTaskIdx\\": 0,\\n    \\"addedOn\\": 0,\\n    \\"tasks\\": [\\n      {\\n        \\"state\\": \\"string\\",\\n        \\"type\\": \\"string\\",\\n        \\"currWorkItemIdx\\": 0,\\n        \\"taskSeqNo\\": 0,\\n        \\"endTime\\": 0,\\n        \\"startTime\\": 0,\\n        \\"workItemList\\": [\\n          {\\n            \\"state\\": \\"string\\",\\n            \\"command\\": \\"string\\",\\n            \\"outputStr\\": \\"string\\",\\n            \\"endTime\\": 0,\\n            \\"startTime\\": 0,\\n            \\"timeTaken\\": 0\\n          }\\n        ],\\n        \\"timeTaken\\": 0,\\n        \\"name\\": \\"string\\"\\n      }\\n    ],\\n    \\"addToInventory\\": true,\\n    \\"instanceType\\": \\"string\\",\\n    \\"endTime\\": 0,\\n    \\"execTime\\": 0,\\n    \\"startTime\\": 0,\\n    \\"useState\\": \\"string\\",\\n    \\"configId\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"version\\": 0,\\n    \\"tenantId\\": \\"string\\"\\n  },\\n  \\"systemWorkflow\\": {\\n    \\"\_id\\": \\"string\\",\\n    \\"state\\": \\"string\\",\\n    \\"type\\": \\"string\\",\\n    \\"description\\": \\"string\\",\\n    \\"lastupdateOn\\": 0,\\n    \\"imageId\\": \\"string\\",\\n    \\"currTaskIdx\\": 0,\\n    \\"addedOn\\": 0,\\n    \\"tasks\\": [\\n      {\\n        \\"state\\": \\"string\\",\\n        \\"type\\": \\"string\\",\\n        \\"currWorkItemIdx\\": 0,\\n        \\"taskSeqNo\\": 0,\\n        \\"endTime\\": 0,\\n        \\"startTime\\": 0,\\n        \\"workItemList\\": [\\n          {\\n            \\"state\\": \\"string\\",\\n            \\"command\\": \\"string\\",\\n            \\"outputStr\\": \\"string\\",\\n            \\"endTime\\": 0,\\n            \\"startTime\\": 0,\\n            \\"timeTaken\\": 0\\n          }\\n        ],\\n        \\"timeTaken\\": 0,\\n        \\"name\\": \\"string\\"\\n      }\\n    ],\\n    \\"addToInventory\\": true,\\n    \\"instanceType\\": \\"string\\",\\n    \\"endTime\\": 0,\\n    \\"execTime\\": 0,\\n    \\"startTime\\": 0,\\n    \\"useState\\": \\"string\\",\\n    \\"configId\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"version\\": 0,\\n    \\"tenantId\\": \\"string\\"\\n  },\\n  \\"workflow\\": {\\n    \\"\_id\\": \\"string\\",\\n    \\"state\\": \\"string\\",\\n    \\"type\\": \\"string\\",\\n    \\"description\\": \\"string\\",\\n    \\"lastupdateOn\\": 0,\\n    \\"imageId\\": \\"string\\",\\n    \\"currTaskIdx\\": 0,\\n    \\"addedOn\\": 0,\\n    \\"tasks\\": [\\n      {\\n        \\"state\\": \\"string\\",\\n        \\"type\\": \\"string\\",\\n        \\"currWorkItemIdx\\": 0,\\n        \\"taskSeqNo\\": 0,\\n        \\"endTime\\": 0,\\n        \\"startTime\\": 0,\\n        \\"workItemList\\": [\\n          {\\n            \\"state\\": \\"string\\",\\n            \\"command\\": \\"string\\",\\n            \\"outputStr\\": \\"string\\",\\n            \\"endTime\\": 0,\\n            \\"startTime\\": 0,\\n            \\"timeTaken\\": 0\\n          }\\n        ],\\n        \\"timeTaken\\": 0,\\n        \\"name\\": \\"string\\"\\n      }\\n    ],\\n    \\"addToInventory\\": true,\\n    \\"instanceType\\": \\"string\\",\\n    \\"endTime\\": 0,\\n    \\"execTime\\": 0,\\n    \\"startTime\\": 0,\\n    \\"useState\\": \\"string\\",\\n    \\"configId\\": \\"string\\",\\n    \\"name\\": \\"string\\",\\n    \\"version\\": 0,\\n    \\"tenantId\\": \\"string\\"\\n  },\\n  \\"runSummaryList\\": [\\n    {\\n      \\"details\\": \\"string\\",\\n      \\"historyTaskInfo\\": {\\n        \\"type\\": \\"string\\",\\n        \\"workItemList\\": [\\n          {\\n            \\"state\\": \\"string\\",\\n            \\"command\\": \\"string\\",\\n            \\"outputStr\\": \\"string\\",\\n            \\"endTime\\": 0,\\n            \\"startTime\\": 0,\\n            \\"timeTaken\\": 0\\n          }\\n        ],\\n        \\"timeTaken\\": 0,\\n        \\"addnDetails\\": [\\n          {\\n            \\"key\\": \\"string\\",\\n            \\"value\\": \\"string\\"\\n          }\\n        ],\\n        \\"name\\": \\"string\\"\\n      },\\n      \\"errorFlag\\": true,\\n      \\"timestamp\\": 0\\n    }\\n  ],\\n  \\"workflowParameters\\": {\\n    \\"topOfStackSerialNumber\\": \\"string\\",\\n    \\"licenseLevel\\": \\"string\\",\\n    \\"licenseType\\": \\"string\\",\\n    \\"configList\\": [\\n      {\\n        \\"configParameters\\": [\\n          {\\n            \\"key\\": \\"string\\",\\n            \\"value\\": \\"string\\"\\n          }\\n        ],\\n        \\"configId\\": \\"string\\"\\n      }\\n    ]\\n  },\\n  \\"dayZeroConfig\\": {\\n    \\"config\\": \\"string\\"\\n  },\\n  \\"dayZeroConfigPreview\\": {},\\n  \\"version\\": 0,\\n  \\"tenantId\\": \\"string\\"\\n}\\n"


..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

